[package]
name = "df-utils"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3"
polars = { version = "0.17.0", features = ["ndarray", "decompress", "parquet", "ipc", "json"] }
anyhow = "1.0"